# canoncheck

./: .gitignore  MANIFEST.in  README.md  harness.py  pyproject.toml
canoncheck/: __init__.py
demo/: app.py  verify_received_bytes.py
js/: canoncheck.mjs
tests/: test_canoncheck.py
vectors/: numbers.json  numeric_equivalence.json  record_agent_output.json  record_nested.json  reject_duplicate_key.json  reject_lone_surrogate.json  reject_nan.json  unicode.json
