[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "canoncheck"
version = "0.1.0"
description = "Cross-language canonicalization and hash conformance for JSON records (RFC 8785, sha256 + keccak256)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Markovian Protocol", email = "hello@quantsynth.net" }]
keywords = ["rfc8785", "jcs", "canonical-json", "keccak256", "sha256", "determinism", "provenance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://markovianprotocol.com"
Source = "https://github.com/MarkovianProtocol/canoncheck"

[tool.setuptools]
packages = ["canoncheck"]
